--- a/TenTenSwift/Base.lproj/Main.storyboard
+++ b/TenTenSwift/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="6bq-SI-ioL">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
     </dependencies>
     <scenes>
@@ -50,7 +49,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jib-xV-HCn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="753" y="-64"/>
+            <point key="canvasLocation" x="557" y="50"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -140,7 +139,7 @@
         <!--Time Attack Mode View Controller-->
         <scene sceneID="kGf-iI-SU1">
             <objects>
-                <viewController id="GyL-59-8sP" customClass="TimeAttackModeViewController" customModule="TenTenSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TimeAttack" id="GyL-59-8sP" customClass="TimeAttackModeViewController" customModule="TenTenSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ZYv-bf-6Xr"/>
                         <viewControllerLayoutGuide type="bottom" id="LMa-bb-9bY"/>
@@ -158,7 +157,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YTY-dh-3no" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="237" y="64"/>
+            <point key="canvasLocation" x="124" y="56"/>
         </scene>
         <!--Result View Controller-->
         <scene sceneID="AtZ-R5-een">
